--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
       <link rel="icon" type="image/x-png" href="favicon.ico">
       <link type="text/css" rel="stylesheet" href="css/jggl_hub.css">
       <title>JGGL Studios</title>
-      <a href="./jggl-hub.html"><img class="logo-hub" src="favicon.ico" alt="JGGL logo">
-        <h1 class="logo-text-hub">JGGL Hub</h1>
-      </a> </div>
+      <a class="logo-link-hub" href="./index.html"><img class="logo-hub" src="favicon.ico" alt="JGGL logo"><h1 class="logo-text-hub">JGGL Hub</h1></a>
+    </div>
   </body>
 </html>
