--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
   </head>
   <body class="body-hub">
-    <div class="head-hub">
+    <div class="topbar-hub">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <link rel="icon" type="image/x-png" href="favicon.ico">
       <link type="text/css" rel="stylesheet" href="css/jggl_hub.css">
