Game Window Update
Testing of the iframe feature to run games in a dedicated window on page

--- a/index.html
+++ b/index.html
@@ -2,14 +2,22 @@
 <html lang="en">
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
-  </head>
-  <body class="body-hub">
+    <title>JGGL Studios</title>
+    <link rel="icon" type="image/x-png" href="favicon.ico">
+    <link type="text/css" rel="stylesheet" href="css/jggl_hub.css">
     <div class="topbar-hub">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <link rel="icon" type="image/x-png" href="favicon.ico">
-      <link type="text/css" rel="stylesheet" href="css/jggl_hub.css">
-      <title>JGGL Studios</title>
       <a href="./index.html"><img class="logo-hub" src="favicon.ico" alt="JGGL logo"><h1 class="logo-text-hub">JGGL Hub</h1></a>
+      <label class="topbar-items">Games</label>
+      <label class="topbar-items">Software</label>
+      <label class="topbar-items">Contact</label>
     </div>
+    <div class="topbar-shadow"></div>
+  </head>
+  <body class="body-hub">
+    <div class="game-window">
+      <iframe src="Games/HTML5/Spaceways/Spaceways_v1.0.0.html"></iframe>
+    </div>
+    
   </body>
 </html>
