--- a/Games/HTML5/Spaceways/Spaceways.html
+++ b/Games/HTML5/Spaceways/Spaceways.html
@@ -3,11 +3,11 @@
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <title>JGGL Studios</title>
-    <link rel="icon" type="image/x-png" href="favicon.ico">
+    <link rel="icon" type="image/x-png" href="/favicon.ico">
     <link type="text/css" rel="stylesheet" href="/css/jggl_hub.css">
     <div class="topbar-hub">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <a href="/index.html"><img class="logo-hub" src="favicon.ico" alt="JGGL logo"><h1 class="logo-text-hub">JGGL Studios</h1></a>
+      <a href="/index.html"><img class="logo-hub" src="/favicon.ico" alt="JGGL logo"><h1 class="logo-text-hub">JGGL Studios</h1></a>
       <a href="/Games/HTML5/Spaceways/Spaceways.html"><label class="topbar-items">Games</label></a>
       <label class="topbar-items">Softwares</label>
       <label class="topbar-items">Websites</label>
@@ -16,5 +16,8 @@
     <div class="topbar-shadow"></div>
   </head>
   <body class="body-hub">
+    <div class="game-window">
+      <iframe src="Spaceways_v1.0.0.html"></iframe>
+    </div> 
   </body>
 </html>
